code giao dien san pham va thanh toan

--- a/CuahangSmartphone/app/src/main/AndroidManifest.xml
+++ b/CuahangSmartphone/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name="com.cuahang.smartphone.login.LoginSucess"/>
+        <activity android:name=".DanhSachSanPham"/>
+        <activity android:name=".GiaoDienGioHang"/>
+        <activity android:name=".RegisterPay"/>
         <activity
             android:name="com.cuahang.smartphone.login.MainActivity"
             android:windowSoftInputMode="stateHidden">
@@ -22,7 +26,6 @@
             android:name="com.cuahang.smartphone.login.RegisterActivity"
             android:label="Đăng ký tài khoản mới"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name="com.cuahang.smartphone.login.LoginSucess"></activity>
     </application>
 
 </manifest>
